test/negative/parse_missing_end_class.mut
# Negative: missing 'end' to close class
class Foo
    x: i64
    def init(self, x: i64)
        self.x = x
    end
